--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -20,7 +20,7 @@ services:
 
   mailhog:
     container_name: mailhog
-    image: wardenenv/mailhog:1.0
+    image: ghcr.io/drpayyne/warden-mailhog
     labels:
       - traefik.enable=true
       - traefik.http.routers.mailhog.tls=true
@@ -30,7 +30,7 @@ services:
 
   tunnel:
     container_name: tunnel
-    image: panubo/sshd:latest
+    image: ghcr.io/drpayyne/sshd
     ports:
       - "127.0.0.1:2222:22"
     volumes:
